--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 .vercel
+.env
+/.env.local
+/.env.development.local
+/.env.test.local
+/.env.production.local
+/.env.development
+/.env.test
+/.env.production
+/.env
+*.log
+node_modules
