--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ JLP_TOKEN_ID=27G8MtK7VtTcCHkpASjSDdkWWYfoqT6ggEuKidVJidD4
 FAST_FETCH_INTERVAL_MS=1000
 
 # How often to SAVE the collected batch to MongoDB (e.g., every 15 seconds)
-DB_SAVE_INTERVAL_MS=10000
+DB_SAVE_INTERVAL_MS=5000
 
-
-VERCEL_CRON_SECRET=hjgjg3uyt4jkh4kj6kjhg6mhv3mvh3khj2lh34kn4m5n6
+PORT=10000                  # Default port (Render will override this)
+FRONTEND_URL=https://solmate-weld.vercel.app # Your frontend URL for CORS
