--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  
   "engines": {
     "node": "18.x"
   },
@@ -16,10 +15,12 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongodb": "^6.7.0",
-    "mongoose": "^8.4.1",
-    "node-fetch": "^3.3.2"
+    "mongoose": "^8.14.0",
+    "node-fetch": "^3.3.2",
+    "ws": "^8.18.1"
   }
 }
