--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "price-fetcher",
+  "name": "solmate-price-api",
   "version": "1.0.0",
-  "description": "Fetches JLP prices for SolMate",
-  "main": "server.js",
+  "description": "Fetches Jupiter prices, saves to DB, and broadcasts via WebSocket",
+  "type": "module",
+  "main": "api/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -10,10 +11,15 @@
   "engines": {
     "node": "18.x"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "solana",
+    "jupiter",
+    "price",
+    "websocket",
+    "api"
+  ],
+  "author": "stk",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
