Fix: Use quote-api.jup.ag hostname for price endpoint

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # price-fetcher/.env
-MONGO_URI=mongodb+srv://solmatebot:Qqwe12011978@cluster0.swnokg1.mongodb.net/priceData?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://solmatebot:Qqwe12011978@cluster0.swnokg1.mongodb.net/priceData?retryWrites=true&w=majority&appName=Cluster0
 JLP_TOKEN_ID=27G8MtK7VtTcCHkpASjSDdkWWYfoqT6ggEuKidVJidD4
           
 
