Fix: Use quote-api.jup.ag hostname for price endpoint

--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ DB_SAVE_INTERVAL_MS=5000
 
 PORT=10000                  # Default port (Render will override this)
 FRONTEND_URL=https://solmate-weld.vercel.app # Your frontend URL for CORS
+
+VITE_API_URL=https://jlp-price-fetcher.onrender.com
+VITE_WS_URL=wss://jlp-price-fetcher.onrender.com
+
