--- a/.env
+++ b/.env
@@ -12,6 +12,6 @@ DB_SAVE_INTERVAL_MS=5000
 PORT=10000                  # Default port (Render will override this)
 FRONTEND_URL=https://solmate-weld.vercel.app # Your frontend URL for CORS
 
-VITE_API_URL=https://jlp-price-fetcher-web.onrender.com
-VITE_WS_URL=wss://https://jlp-price-fetcher-web.onrender.com
+#VITE_API_URL=https://jlp-price-fetcher-web.onrender.com
+#VITE_WS_URL=wss://https://jlp-price-fetcher-web.onrender.com
 
